@@ -359,7 +359,7 @@ depth 0:           1 Machine (type #0)
    depth 3:        128 Core (type #2)
     depth 4:       128 PU (type #3)
 Special depth -3:  17 NUMANode (type #13)
-Relative latency matrix (kind 5) between 17 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 17 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7     8     9    10    11    12    13    14    15    16
       0    10    17    17    17    20    20    20    20    20    20    20    20    20    20    20    20    14
       1    17    10    17    17    20    20    20    20    20    20    20    20    20    20    20    20    14
