@@ -795,7 +795,7 @@ depth 0:           1 Machine (type #0)
      depth 5:      256 Core (type #2)
       depth 6:     256 PU (type #3)
 Special depth -3:  64 NUMANode (type #13)
-Relative latency matrix (kind 5) between 64 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 64 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7     8     9    10    11    12    13    14    15    16    17    18    19    20    21    22    23    24    25    26    27    28    29    30    31    32    33    34    35    36    37    38    39    40    41    42    43    44    45    46    47    48    49    50    51    52    53    54    55    56    57    58    59    60    61    62    63
       0    10    22    22    22    26    26    26    26    26    26    26    26    30    30    30    30    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34
       1    22    10    22    22    26    26    26    26    26    26    26    26    30    30    30    30    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34    30    30    30    30    34    34    34    34
