@@ -670,7 +670,7 @@ depth 0:             1 Machine (type #0)
         depth 8:     64 Core (type #2)
          depth 9:    256 PU (type #3)
 Special depth -3:    8 NUMANode (type #13)
-Relative latency matrix (kind 5) between 8 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 8 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7
       0    10    20    40    40    40    40    40    40
       1    20    10    40    40    40    40    40    40
