@@ -318,7 +318,7 @@ depth 0:             1 Machine (type #0)
         depth 8:     64 L1iCache (type #9)
          depth 9:    64 PU (type #3)
 Special depth -3:    16 NUMANode (type #13)
-Relative latency matrix (kind 5) between 16 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 16 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7     8     9    10    11    12    13    14    15
       0    10    20    20    20    20    20    20    20    20    20    20    20    20    20    20    20
       1    20    10    20    20    20    20    20    20    20    20    20    20    20    20    20    20
