@@ -76,7 +76,7 @@ depth 0:           1 Machine (type #0)
       depth 6:     8 Core (type #2)
        depth 7:    32 PU (type #3)
 Special depth -3:  2 NUMANode (type #13)
-Relative latency matrix (kind 5) between 2 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 2 NUMANodes (depth -3) by logical indexes:
   index     0     1
       0    10    40
       1    40    10
