@@ -384,7 +384,7 @@ Special depth -3:   8 NUMANode (type #13)
 Special depth -4:   14 Bridge (type #14)
 Special depth -5:   8 PCIDev (type #15)
 Special depth -6:   3 OSDev (type #16)
-Relative latency matrix (kind 5) between 8 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 8 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7
       0    10    50    65    65    65    65    65    65
       1    50    10    65    65    65    65    65    65
